--- a/tablaphp/formulario.html
+++ b/tablaphp/formulario.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-    <form action="respuesta.php" method="get">
-        Número de filas: <input type="number" name="nombre"><br>
+    <form action="tabla.php" method="get">
+        Número de filas: <input type="text" name="numero"><br>
         <input type="submit">
     </form>
 
